<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<groupId>edu.illinois.cs.cogcomp</groupId>
	<artifactId>DatalessClassification</artifactId>
	<packaging>jar</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>DatalessClassification</name>
	<url>https://cogcomp.cs.illinois.edu</url>
  
 	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties> 

  	<repositories>
		<repository>
			<id>CogcompSoftware</id>
			<name>CogcompSoftware</name>
			<url>https://cogcomp.cs.illinois.edu/m2repo/</url>
		</repository>
		<repository>
            <id>ukp-oss-model-releases</id>
            <url>https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-model-releases-local</url>
        </repository>
	</repositories>
    
	<dependencies>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>3.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-analyzers</artifactId>
			<version>3.0.3</version>
		</dependency>
		
		<dependency>
			<groupId>edu.illinois.cs.cogcomp</groupId>
			<artifactId>wikipediaAPI</artifactId>
			<version>2.1.6-SNAPSHOT</version>
		</dependency>
				    
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>commons-compress</groupId>
			<artifactId>commons-compress</artifactId>
			<version>20050911</version>
		</dependency>


		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.1</version>
		</dependency>


		<dependency>
			<groupId>edu.illinois.cs.cogcomp</groupId>
			<artifactId>coreUtilities</artifactId>
			<version>0.1</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.6</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.xmlrpc</groupId>
			<artifactId>xmlrpc-server</artifactId>
			<version>3.1.3</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>org.apache.xmlrpc</groupId>
			<artifactId>xmlrpc-client</artifactId>
			<version>3.1.3</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.easytesting</groupId>
			<artifactId>fest-assert</artifactId>
			<version>1.4</version>
		</dependency>
		
		<dependency>
			<groupId>org.easytesting</groupId>
			<artifactId>fest-assert-core</artifactId>
			<version>2.0M10</version>
		</dependency>

		<dependency>
			<groupId>edu.illinois.cs.cogcomp</groupId>
			<artifactId>LBJ</artifactId>
			<version>2.8.2</version>
		</dependency>
		 
		<dependency>
			<groupId>edu.illinois.cs.cogcomp</groupId>
			<artifactId>LBJLibrary</artifactId>
			<version>2.8.2</version>
		</dependency>
		
		<dependency>
			<groupId>colt</groupId>
			<artifactId>colt</artifactId>
			<version>1.2.0</version>
		</dependency>
		
		<dependency>
			<groupId>net.sourceforge.parallelcolt</groupId>
			<artifactId>parallelcolt</artifactId>
			<version>0.10.0</version>
		</dependency>
		
		<dependency>
		    <groupId>de.bwaldvogel</groupId>
		    <artifactId>liblinear</artifactId>
		    <version>1.94</version>
		</dependency>
		
		<dependency>
			<groupId>edu.illinois.cs.cogcomp</groupId>
			<artifactId>JLIS-multiclass</artifactId>
			<version>0.5</version>
		</dependency>
		
		<dependency>
			<groupId>org.dkpro.core</groupId>
			<artifactId>dkpro-core-opennlp-asl</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.dkpro.core</groupId>
			<artifactId>dkpro-core-snowball-asl</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.6</version>
		</dependency>
		<dependency>
			<groupId>org.dkpro.core</groupId>
			<artifactId>dkpro-core-corenlp-gpl</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.deeplearning4j</groupId>
			<artifactId>deeplearning4j-nlp</artifactId>
			<version>0.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.nd4j</groupId>
			<artifactId>nd4j-native</artifactId>
			<version>0.9.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.13.3</version>
		</dependency>
		<dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.17.2</version>
        </dependency>
        <dependency>
            <groupId>de.tudarmstadt.ukp.wikipedia</groupId>
            <artifactId>de.tudarmstadt.ukp.wikipedia.api</artifactId>
            <version>1.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.2</version>
        </dependency>
	</dependencies>
	
	<distributionManagement>
	  <repository>
	    <id>CogcompSoftware</id>
	    <name>CogcompSoftware</name>
	    <url>scp://bilbo.cs.illinois.edu:/mounts/bilbo/disks/0/www/cogcomp/html/m2repo</url>
	  </repository>
	</distributionManagement>
	
  <build>
  	<extensions>
      <extension>
          <groupId>org.apache.maven.wagon</groupId>
          <artifactId>wagon-ssh</artifactId>
          <version>2.4</version>
      </extension>
  	</extensions>
  
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
  		<plugin>
       		<artifactId>maven-compiler-plugin</artifactId>
        	<version>3.1</version>
       		<configuration>
          		<source>11</source>
          		<target>11</target>
        	</configuration>
    	</plugin>
			<plugin>
  				<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-source-plugin</artifactId>
    			<version>2.4</version>
    			<executions>
      				<execution>
        				<id>attach-sources</id>
    				<goals>
     			 		<goal>jar</goal>
    				</goals>
      				</execution>
    			</executions>
			</plugin>
    </plugins>
  </build>
</project>